scenes/opengl: Fix null dereference in OpenGLWindow::windowTexture()

If the SurfaceItem has no SurfacePixmap, kwin will crash when trying to
access the surface texture.

BUG: 437709


(cherry picked from commit f2b6a6b2f6e9013a57efbda5cfea944558131aa4)